# cull-gmail

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRLOG.md  README.md  WARP.md  deny.toml  release-hook.sh  release.toml  sonar-project.properties
.circleci/: config.yml  release.yml  update_prlog.yml
.config/: nextest.toml
crates/cull-gmail/: Cargo.toml  README.md  release-hook.sh  release.toml
crates/cull-gmail/src/: eol_action.rs  gmail_client.rs  lib.rs  rules.rs
crates/cull-gmail/src/cli/: labels_cli.rs  main.rs  messages_cli.rs  rules_cli.rs
crates/cull-gmail/src/cli/init_cli/: tests.rs
crates/cull-gmail/src/cli/rules_cli/: run_cli.rs  validate_cli.rs
crates/cull-gmail/src/cli/rules_cli/config_cli/: add_label_cli.rs
crates/cull-gmail/src/gmail_client/: message_summary.rs
crates/cull-gmail/src/retention/: message_age.rs
crates/cull-gmail/src/rules/: eol_rule.rs
crates/cull-gmail/tests/: cli_integration_tests.rs  gmail_client_unit_tests.rs  gmail_message_list_integration.rs  init_integration_tests.rs
docs/: cli_init.md  lib.md  main.md
docs/lib/: lib.md
docs/readme/: head.md  tail.md
src/: client.rs  client_config.rs  config.rs  config_cli.rs  credential.rs  delete.rs  eol_action.rs  eol_cmd.rs  error.rs  gmail_client.rs  labels.rs  lib.rs  list.rs  list_cli.rs  main.rs  message.rs  message_cli.rs  message_list.rs  processor.rs  retention.rs  rule_processor.rs  rules.rs  rules_cli.rs  trash.rs  trash_cli.rs  utils.rs
src/cli/: delete_cli.rs  init_cli.rs  label_cli.rs  labels_cli.rs  main.rs  message_cli.rs  message_trait.rs  messages_cli.rs  rules_cli.rs  run_cli.rs  token_cli.rs  trash_cli.rs
src/cli/config_cli/label_cli/: add_cli.rs  remove_cli.rs
src/cli/config_cli/rules_cli/: add_cli.rs
src/cli/init_cli/: tests.rs
src/cli/rules_cli/: config_cli.rs  run_cli.rs
src/cli/rules_cli/config_cli/: action_cli.rs  action_rule_cli.rs  add_cli.rs  add_rule_cli.rs  label_cli.rs  list_label_cli.rs  remove_label_cli.rs  rm_cli.rs  rm_rule_cli.rs  rules_cli.rs
src/cli/rules_cli/config_cli/label_cli/: add_cli.rs  list_cli.rs  remove_cli.rs
src/cli/rules_cli/config_cli/rules_cli/: add_cli.rs  rm_cli.rs
src/client_config/: config_root.rs
src/config/: eol_rule.rs
src/config_cli/: label_cli.rs
src/config_cli/label_cli/: add_cli.rs  list_cli.rs  remove_cli.rs
src/gmail_client/: message_summary.rs
src/message_list/: message_summary.rs
src/retention/: message_age.rs
src/rules/: eol_rule.rs
src/rules_cli/: add_cli.rs  rm_cli.rs
tests/: cli_integration_tests.rs  gmail_client_unit_tests.rs  init_integration_tests.rs
