[package]
name = "cull-gmail"
description = "Cull emails from a gmail account using the gmail API"
version = "0.0.16"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
edition = "2024"
rust-version = "1.88"
keywords = ["gmail", "gmail-api", "management"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jerus-org/cull-gmail"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "docs",
]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
config = { version = "0.15.19", default-features = false, features = [
    "json",
    "toml",
] }
env_logger = "0.11.8"
google-gmail1 = "7.0.0"
hyper-rustls = { version = "0.27", features = ["http1"] }
lazy-regex = "3.4.2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
toml = "0.9.11"
base64 = "0.22.1"
flate2 = "1.1.5"
dialoguer = "0.12.0"
indicatif = "0.18.3"

[dev-dependencies]
httpmock = "0.8.2"
tokio-test = "0.4.5"
temp-env = "0.3.6"
tempfile = "3.24.0"
futures = "0.3.31"
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
predicates = "3.1.3"

[lints.clippy]
uninlined-format-args = "warn"
unnecessary_semicolon = "warn"

[lints.rust]
dead-code = "allow" # allow temporarily while developing initial code

[lib]
name = "cull_gmail"
path = "src/lib.rs"

[[bin]]
name = "cull-gmail"
path = "src/cli/main.rs"
