[workspace]
members = ["crates/cull-gmail"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/jerus-org/cull-gmail"
keywords = ["gmail", "gmail-api", "management"]
categories = ["command-line-utilities"]

[workspace.dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
config = { version = "0.15.21", default-features = false, features = ["json", "toml"] }
dialoguer = "0.12.0"
env_logger = "0.11.9"
flate2 = "1.1.9"
futures = "0.3.32"
google-gmail1 = { version = "7.0.0", default-features = false, features = ["yup-oauth2", "aws-lc-rs"] }
hyper-rustls = { version = "0.27.7", features = ["http1"] }
indicatif = "0.18.4"
lazy-regex = "3.6.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process"] }
toml = "1.0.6"

# dev-dependencies
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
httpmock = "0.8.3"
predicates = "3.1.4"
temp-env = "0.3.6"
tempfile = "3.27.0"
tokio-test = "0.4.5"

[workspace.lints.clippy]
uninlined-format-args = "warn"
unnecessary_semicolon = "warn"

[workspace.lints.rust]
dead-code = "allow"
