[package]
name = "cull-gmail"
description = "Cull emails from a gmail account using the gmail API"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
    "docs",
]

[dependencies]
base64.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
config.workspace = true
dialoguer.workspace = true
env_logger.workspace = true
flate2.workspace = true
google-gmail1.workspace = true
hyper-rustls.workspace = true
indicatif.workspace = true
lazy-regex.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
futures.workspace = true
httpmock.workspace = true
predicates.workspace = true
temp-env.workspace = true
tempfile.workspace = true
tokio-test.workspace = true

[lints]
workspace = true

[lib]
name = "cull_gmail"
path = "src/lib.rs"

[[bin]]
name = "cull-gmail"
path = "src/cli/main.rs"
